# HkEquitySnapshotPipelines

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  qsl.toml
.github/workflows/: ci.yml  monthly_snapshot_audit.yml  publish-hk-snapshot-artifacts.yml
docs/: artifact_contract.md  first_snapshot_evidence_tools.md  first_snapshot_evidence_tools.zh-CN.md  first_snapshot_promotion_runbook.md  first_snapshot_promotion_runbook.zh-CN.md  hk_snapshot_publish_workflow.md  hk_snapshot_publish_workflow.zh-CN.md  low_vol_dividend_artifact_evidence.md  low_vol_dividend_artifact_evidence.zh-CN.md  low_vol_dividend_backtest_evidence.md  low_vol_dividend_backtest_evidence.zh-CN.md  low_vol_dividend_evidence_assembler.md  low_vol_dividend_evidence_assembler.zh-CN.md  low_vol_dividend_evidence_bundle.md  low_vol_dividend_evidence_bundle.zh-CN.md  low_vol_dividend_live_enablement_audit.md  low_vol_dividend_live_enablement_audit.zh-CN.md  low_vol_dividend_live_enablement_gate.md  low_vol_dividend_live_enablement_gate.zh-CN.md  low_vol_dividend_live_enablement_package.md  low_vol_dividend_live_enablement_package.zh-CN.md  low_vol_dividend_operator_evidence.md  low_vol_dividend_operator_evidence.zh-CN.md  low_vol_dividend_platform_evidence.md  low_vol_dividend_platform_evidence.zh-CN.md  low_vol_dividend_production_source_audit.md  low_vol_dividend_production_source_audit.zh-CN.md
docs/research/: hk_snapshot_strategy_candidates.md
examples/ah_premium_relative_value/: valuation_snapshot.sample.csv
examples/blue_chip/: prices.sample.csv  universe.sample.csv
examples/central_soe_value_quality_select/: factor_snapshot.sample.csv
examples/composite_factor_quality_value_momentum/: factor_snapshot.sample.csv
examples/factor_mix_qvlm_risk_parity/: factor_snapshot.sample.csv
examples/free_cash_flow_quality/: factor_snapshot.sample.csv
examples/index_rebalance_event/: event_snapshot.sample.csv
examples/low_vol_dividend_quality/: factor_snapshot.sample.csv  longbridge_universe.seed.csv  production_factor_snapshot.template.csv
examples/quality_growth_low_volatility/: factor_snapshot.sample.csv
examples/residual_momentum_quality/: factor_snapshot.sample.csv
examples/shareholder_yield_quality/: factor_snapshot.sample.csv
examples/southbound_flow_momentum/: flow_snapshot.sample.csv
scripts/: assemble_low_vol_dividend_live_enablement_evidence.py  audit_low_vol_dividend_live_enablement.py  build_ah_premium_sample.py  build_blue_chip_sample.py  build_central_soe_value_quality_sample.py  build_composite_factor_sample.py  build_factor_mix_qvlm_risk_parity_sample.py  build_first_snapshot_evidence_bundles.py  build_first_snapshot_live_enablement_packages.py  build_free_cash_flow_sample.py  build_index_rebalance_event_sample.py  build_liquid_momentum_sample.py  build_low_vol_dividend_evidence_bundle.py  build_low_vol_dividend_live_enablement_package.py  build_low_vol_dividend_longbridge_factor_snapshot.py  build_low_vol_dividend_public_factor_snapshot.py  build_low_vol_dividend_sample.py  build_quality_growth_low_volatility_sample.py  build_residual_momentum_sample.py  build_shareholder_yield_sample.py  build_southbound_flow_sample.py  collect_low_vol_dividend_dry_run_support_artifacts.py  draft_first_snapshot_backtest_evidence.py  draft_first_snapshot_production_source_audit.py  draft_low_vol_dividend_artifact_evidence.py  draft_low_vol_dividend_backtest_evidence.py  draft_low_vol_dividend_operator_evidence.py  draft_low_vol_dividend_platform_evidence.py  draft_low_vol_dividend_platform_evidence_from_runtime.py  draft_low_vol_dividend_production_source_audit.py  gate_codex_app_review.py  intake_low_vol_dividend_live_enablement_evidence.py  print_first_snapshot_promotion_plan.py  print_low_vol_dividend_live_enablement_readiness.py  print_snapshot_promotion_matrix.py  print_snapshot_readiness.py  publish_hk_snapshot_artifacts.py  research_hk_liquid_momentum_quality_backtest.py  research_hk_snapshot_proxy_cycle_backtest.py  resolve_hk_snapshot_inputs.py  (+2 more)
src/hk_equity_snapshot_pipelines/: __init__.py  ah_premium_relative_value.py  ah_premium_relative_value_strategy.py  artifact_provenance_policy.py  artifacts.py  backtest_validation_policy.py  baseline_rotation_live_enablement_policy.py  blue_chip_leader_rotation.py  blue_chip_strategy.py  central_soe_value_quality_select.py  central_soe_value_quality_select_strategy.py  contracts.py  (+64 more)
tests/: test_ah_premium_relative_value.py  test_ah_premium_relative_value_strategy.py  test_blue_chip_leader_rotation.py  test_blue_chip_strategy.py  test_central_soe_value_quality_select.py  test_central_soe_value_quality_select_strategy.py  test_composite_factor_quality_value_momentum.py  test_composite_factor_quality_value_momentum_strategy.py  test_contracts.py  test_cross_repo_contracts.py  test_factor_mix_qvlm_risk_parity.py  test_factor_mix_qvlm_risk_parity_strategy.py  test_first_snapshot_evidence_tools.py  test_first_snapshot_promotion_plan.py  test_free_cash_flow_quality.py  test_free_cash_flow_quality_strategy.py  test_gate_codex_app_review.py  test_index_rebalance_event.py  test_index_rebalance_event_strategy.py  test_input_sources.py  test_liquid_momentum_quality.py  test_liquid_momentum_quality_strategy.py  test_live_enablement_evidence.py  test_low_vol_dividend_artifact_evidence.py  test_low_vol_dividend_backtest_evidence.py  test_low_vol_dividend_dry_run_support_artifacts.py  test_low_vol_dividend_evidence_assembler.py  test_low_vol_dividend_evidence_bundle.py  test_low_vol_dividend_evidence_intake.py  test_low_vol_dividend_evidence_readiness.py  test_low_vol_dividend_live_enablement_audit.py  test_low_vol_dividend_live_enablement_gate.py  test_low_vol_dividend_live_enablement_package.py  test_low_vol_dividend_longbridge_snapshot.py  test_low_vol_dividend_operator_evidence.py  test_low_vol_dividend_platform_evidence.py  test_low_vol_dividend_platform_evidence_from_runtime.py  test_low_vol_dividend_production_source_audit.py  test_low_vol_dividend_public_snapshot.py  test_low_vol_dividend_quality.py  (+20 more)
(+3 files in other folders)
