[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-equity-snapshot-pipelines"
version = "0.1.1"
description = "Feature-snapshot pipelines and scaffold helpers for Hong Kong equity strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
hkeq-build-blue-chip-leader-snapshot = "hk_equity_snapshot_pipelines.blue_chip_leader_rotation:main"
hkeq-build-central-soe-value-quality-select-snapshot = "hk_equity_snapshot_pipelines.central_soe_value_quality_select:main"
hkeq-build-ah-premium-relative-value-snapshot = "hk_equity_snapshot_pipelines.ah_premium_relative_value:main"
hkeq-build-composite-factor-qvm-snapshot = "hk_equity_snapshot_pipelines.composite_factor_quality_value_momentum:main"
hkeq-build-factor-mix-qvlm-risk-parity-snapshot = "hk_equity_snapshot_pipelines.factor_mix_qvlm_risk_parity:main"
hkeq-build-free-cash-flow-quality-snapshot = "hk_equity_snapshot_pipelines.free_cash_flow_quality:main"
hkeq-build-index-rebalance-event-snapshot = "hk_equity_snapshot_pipelines.index_rebalance_event:main"
hkeq-build-liquid-momentum-quality-snapshot = "hk_equity_snapshot_pipelines.liquid_momentum_quality:main"
hkeq-build-low-vol-dividend-quality-snapshot = "hk_equity_snapshot_pipelines.low_vol_dividend_quality:main"
hkeq-build-quality-growth-low-volatility-snapshot = "hk_equity_snapshot_pipelines.quality_growth_low_volatility:main"
hkeq-build-residual-momentum-quality-snapshot = "hk_equity_snapshot_pipelines.residual_momentum_quality:main"
hkeq-build-shareholder-yield-quality-snapshot = "hk_equity_snapshot_pipelines.shareholder_yield_quality:main"
hkeq-build-southbound-flow-momentum-snapshot = "hk_equity_snapshot_pipelines.southbound_flow_momentum:main"
hkeq-print-snapshot-readiness = "hk_equity_snapshot_pipelines.snapshot_readiness:main"
hkeq-print-snapshot-promotion-matrix = "hk_equity_snapshot_pipelines.snapshot_promotion_matrix:main"
hkeq-print-first-snapshot-promotion-plan = "hk_equity_snapshot_pipelines.first_snapshot_promotion_plan:main"
hkeq-validate-snapshot-artifact-pack = "hk_equity_snapshot_pipelines.snapshot_artifact_validation:main"
hkeq-validate-live-enable-evidence = "hk_equity_snapshot_pipelines.live_enablement_evidence:main"
hkeq-audit-low-vol-dividend-live-enable = "hk_equity_snapshot_pipelines.low_vol_dividend_live_enablement_audit:main"
hkeq-draft-low-vol-dividend-platform-evidence = "hk_equity_snapshot_pipelines.low_vol_dividend_platform_evidence:main"
hkeq-draft-low-vol-dividend-artifact-evidence = "hk_equity_snapshot_pipelines.low_vol_dividend_artifact_evidence:main"
hkeq-assemble-low-vol-dividend-live-enable-evidence = "hk_equity_snapshot_pipelines.low_vol_dividend_evidence_assembler:main"
hkeq-build-first-snapshot-live-enablement-packages = "hk_equity_snapshot_pipelines.first_snapshot_live_enablement_package:main"
hkeq-build-first-snapshot-evidence-bundles = "hk_equity_snapshot_pipelines.first_snapshot_evidence_bundle:main"
hkeq-draft-first-snapshot-production-source-audit = "hk_equity_snapshot_pipelines.first_snapshot_production_source_audit:main"
hkeq-draft-first-snapshot-backtest-evidence = "hk_equity_snapshot_pipelines.first_snapshot_backtest_evidence:main"
hkeq-research-snapshot-proxy-cycle-backtest = "hk_equity_snapshot_pipelines.snapshot_proxy_backtest:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
