[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-equity-snapshot-pipelines"
version = "0.1.1"
description = "Feature-snapshot pipelines and scaffold helpers for Hong Kong equity strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]
longbridge = ["longbridge>=4.2,<5"]
public-data = ["yfinance>=0.2.40"]

[project.scripts]
hkeq-build-low-vol-dividend-quality-snapshot = "hk_equity_snapshot_pipelines.low_vol_dividend_quality:main"
hkeq-print-snapshot-readiness = "hk_equity_snapshot_pipelines.snapshot_readiness:main"
hkeq-print-snapshot-promotion-matrix = "hk_equity_snapshot_pipelines.snapshot_promotion_matrix:main"
hkeq-print-first-snapshot-promotion-plan = "hk_equity_snapshot_pipelines.first_snapshot_promotion_plan:main"
hkeq-validate-snapshot-artifact-pack = "hk_equity_snapshot_pipelines.snapshot_artifact_validation:main"
hkeq-validate-live-enable-evidence = "hk_equity_snapshot_pipelines.live_enablement_evidence:main"
hkeq-audit-low-vol-dividend-live-enable = "hk_equity_snapshot_pipelines.low_vol_dividend_live_enablement_audit:main"
hkeq-draft-low-vol-dividend-platform-evidence = "hk_equity_snapshot_pipelines.low_vol_dividend_platform_evidence:main"
hkeq-draft-low-vol-dividend-platform-evidence-from-runtime = "hk_equity_snapshot_pipelines.low_vol_dividend_platform_evidence_from_runtime:main"
hkeq-collect-low-vol-dividend-dry-run-support-artifacts = "hk_equity_snapshot_pipelines.low_vol_dividend_dry_run_support_artifacts:main"
hkeq-draft-low-vol-dividend-artifact-evidence = "hk_equity_snapshot_pipelines.low_vol_dividend_artifact_evidence:main"
hkeq-assemble-low-vol-dividend-live-enable-evidence = "hk_equity_snapshot_pipelines.low_vol_dividend_evidence_assembler:main"
hkeq-intake-low-vol-dividend-live-enable-evidence = "hk_equity_snapshot_pipelines.low_vol_dividend_evidence_intake:main"
hkeq-print-low-vol-dividend-live-enable-readiness = "hk_equity_snapshot_pipelines.low_vol_dividend_evidence_readiness:main"
hkeq-draft-low-vol-dividend-operator-evidence = "hk_equity_snapshot_pipelines.low_vol_dividend_operator_evidence:main"
hkeq-run-low-vol-dividend-live-enable-gate = "hk_equity_snapshot_pipelines.low_vol_dividend_live_enablement_gate:main"
hkeq-draft-low-vol-dividend-production-source-audit = "hk_equity_snapshot_pipelines.low_vol_dividend_production_source_audit:main"
hkeq-draft-low-vol-dividend-backtest-evidence = "hk_equity_snapshot_pipelines.low_vol_dividend_backtest_evidence:main"
hkeq-build-first-snapshot-live-enablement-packages = "hk_equity_snapshot_pipelines.first_snapshot_live_enablement_package:main"
hkeq-build-first-snapshot-evidence-bundles = "hk_equity_snapshot_pipelines.first_snapshot_evidence_bundle:main"
hkeq-draft-first-snapshot-production-source-audit = "hk_equity_snapshot_pipelines.first_snapshot_production_source_audit:main"
hkeq-draft-first-snapshot-backtest-evidence = "hk_equity_snapshot_pipelines.first_snapshot_backtest_evidence:main"
hkeq-research-snapshot-proxy-cycle-backtest = "hk_equity_snapshot_pipelines.snapshot_proxy_backtest:main"
hkeq-resolve-hk-snapshot-inputs = "hk_equity_snapshot_pipelines.input_sources:main"
hkeq-publish-hk-snapshot-artifacts = "hk_equity_snapshot_pipelines.publish:main"
hkeq-build-low-vol-dividend-longbridge-factor-snapshot = "hk_equity_snapshot_pipelines.low_vol_dividend_longbridge_snapshot:main"
hkeq-build-low-vol-dividend-public-factor-snapshot = "hk_equity_snapshot_pipelines.low_vol_dividend_public_snapshot:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
